apd_detector_rust/build_final_error_v16_utf8.txt
**********************************************************************
** Visual Studio 2022 Developer Command Prompt v17.14.28
** Copyright (c) 2025 Microsoft Corporation
**********************************************************************
[vcvarsall.bat] Environment initialized for: 'x64'
cmd :    Compiling 
apd_detector v0.1.0 (C:\Magan
g_Alif\Trial\apd_detector_rus
t)
At line:1 char:1
+ cmd /c "call ""C:\Program 
Files\Microsoft Visual 
Studio\2022\Communit ...
+ ~~~~~~~~~~~~~~~~~~~~~~~~~~~
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
~~~~~~~~~~~~~
    + CategoryInfo           
   : NotSpecified: (   Comp  
  iling ap..._detector_rus   
 t):String) [], RemoteExc    
eption
    + FullyQualifiedErrorId  
   : NativeCommandError
 
warning: unused import: 
`std::path::PathBuf`
 --> src\main.rs:2:5
  |
2 | use std::path::PathBuf;
  |     ^^^^^^^^^^^^^^^^^^
  |
  = note: 
`#[warn(unused_imports)]` 
(part of `#[warn(unused)]`) 
on by default

warning: unused imports: 
`CV_32F` and `Size`
 --> src\utils.rs:1:40
  |
1 | use 
opencv::core::{Point, 
Scalar, Mat, Size, CV_32F};
  |                          
              ^^^^  ^^^^^^

error[E0596]: cannot borrow 
`self.session` as mutable, 
as it is behind a `&` 
reference
  --> src\detector.rs:49:23
   |
49 |           let outputs = 
self
   |  
_______________________^
50 | |             .session
   | |____________________^ 
`self` is a `&` reference, 
so it cannot be borrowed as 
mutable
   |
help: consider changing this 
to be a mutable reference
   |
37 |     pub fn detect(&mut 
self, frame_data: &[f32], 
frame_height: i32, 
frame_width: i32) -> 
Result<Vec<Detection>> {
   |                    +++

For more information about 
this error, try `rustc 
--explain E0596`.
warning: `apd_detector` (bin 
"apd_detector") generated 2 
warnings
error: could not compile 
`apd_detector` (bin 
"apd_detector") due to 1 
previous error; 2 warnings 
emitted
